# farec

./: CMakeLists.txt
src/: CMakeCommons.txt  CMakeLists.txt  FarecApp.cc  FarecApp.hh  farec.cc  farecmainwin.cc  farecmainwin.hh  farecmainwin.ui  farecmainwin_tests.cc
src/libfarec/: CMakeLists.txt  Classifier.cc  Classifier.hh  CommonOps.cc  CommonOps.hh  FeatExtract.cc  FeatExtract.hh  ImgData.cc  ImgData.hh  ImgOp.cc  ImgOp.hh  ImgPrep.cc  ImgPrep.hh
src/libfarec/db/: FarecDb.cc  FarecDb.hh  Person.cc  Person.hh
src/libfarec/except/: FEDbException.cc  FEDbException.hh  FEDbInvalidState.cc  FEDbInvalidState.hh  FEInvalidParameter.cc  FEInvalidParameter.hh  FENoData.cc  FENoData.hh  FarecException.cc  FarecException.hh
src/ui/: AboutDialog.cc  AboutDialog.hh  AboutDialog.ui  DbConnect.cc  DbConnect.hh  DbConnect.ui  GradientDisplay.cc  GradientDisplay.hh  GradientDisplay.ui  Graph.cc  Graph.hh  PersonAdder.cc  PersonAdder.hh  PersonAdder.ui  PersonChooser.cc  PersonChooser.hh  PersonChooser.ui  Persons.cc  Persons.hh  Persons.ui  PplSrchModel.cc  PplSrchModel.hh  farecmainwin.cc  farecmainwin.hh  farecmainwin.ui  farecmainwin_tests.cc  icons.qrc
src/ui/icons/: COPYING
